--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,11 +1,8 @@
-.App{
-  margin-bottom: 150px;
-}
 
 .main-content { 
   font-family: "Winky Sans", sans-serif;
   font-weight: 100;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
@@ -22,7 +19,8 @@
 .footer {
   position: fixed;
   bottom: 0px;
-  margin: 50px;
+  z-index: 3;
+  height: auto; 
 }
 
 
